Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
-layout: default
+layout: recruiting
 ---
+
 <!-- blog feed -->
       {% for post in paginator.posts %}
 			<div class="row content-container">
